--- a/src/theme/SearchButton/index.css
+++ b/src/theme/SearchButton/index.css
@@ -10,8 +10,8 @@
     rgb(213, 219, 228) 0%,
     rgb(248, 248, 248) 100%
   );
-  --search-local-key-shadow: inset 0 -2px 0 0 rgb(205, 205, 230), inset 0 0 1px 1px #fff,
-    0 1px 2px 1px rgba(30, 35, 90, 0.4);
+  --search-local-key-shadow:
+    inset 0 -2px 0 0 rgb(205, 205, 230), inset 0 0 1px 1px #fff, 0 1px 2px 1px rgba(30, 35, 90, 0.4);
 }
 
 /* Darkmode */
@@ -19,7 +19,8 @@
 html[data-theme='dark'] {
   --search-local-key-gradient: linear-gradient(-26.5deg, rgb(86, 88, 114) 0%, rgb(49, 53, 91) 100%);
 
-  --search-local-key-shadow: inset 0 -2px 0 0 rgb(40, 45, 85), inset 0 0 1px 1px rgb(81, 87, 125),
+  --search-local-key-shadow:
+    inset 0 -2px 0 0 rgb(40, 45, 85), inset 0 0 1px 1px rgb(81, 87, 125),
     0 2px 2px 0 rgba(3, 4, 9, 0.3);
 }
 
