--- a/src/theme/SearchButton/index.css
+++ b/src/theme/SearchButton/index.css
@@ -25,18 +25,15 @@ html[data-theme='dark'] {
 }
 
 .DocSearch-Button {
-  align-items: center;
   background: var(--ifm-navbar-search-input-background-color);
   border: 0;
   border-radius: 40px;
   color: var(--ifm-navbar-search-input-color);
   cursor: pointer;
-  display: flex;
-  font-weight: 500;
   height: 36px;
-  justify-content: space-between;
   margin: 0 0 0 16px;
-  padding: 0 8px;
+  position: relative;
+  width: 200px;
 }
 
 .DocSearch-Button:hover,
@@ -46,22 +43,20 @@ html[data-theme='dark'] {
   outline: none;
 }
 
-.DocSearch-Button-Container {
-  align-items: center;
-  display: flex;
-  width: 100%;
-}
-
 .DocSearch-Button-Input {
   background: transparent;
   border: none;
+  border-radius: 40px;
   color: var(--ifm-navbar-search-input-color);
   cursor: pointer;
-  flex: 1;
   font-size: 1rem;
   font-weight: 500;
+  height: 100%;
+  left: 0;
   outline: none;
-  padding: 0 12px 0 6px;
+  padding: 0 16px 0 40px;
+  position: absolute;
+  top: 0;
   width: 100%;
 }
 
@@ -72,6 +67,17 @@ html[data-theme='dark'] {
 
 .DocSearch-Button-Input:focus {
   cursor: text;
+}
+
+.DocSearch-Button-Icon {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  left: 8px;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  z-index: 1;
 }
 
 .DocSearch-Search-Icon {
@@ -108,5 +114,17 @@ html[data-theme='dark'] {
 @media (max-width: 750px) {
   .DocSearch-Button-Keys {
     display: none;
+  }
+  
+  .DocSearch-Button {
+    width: 36px;
+  }
+  
+  .DocSearch-Button-Input {
+    padding: 0 8px 0 32px;
+  }
+  
+  .DocSearch-Button-Input::placeholder {
+    opacity: 0;
   }
 }
